[tool.poetry]
name = "pycounts_ljq_mds"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["jiaquanlim"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0"
numpy = {version = "1.21.5", python = ">=3.7, <3.11"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
